Added test case sample scripts

--- a/APITestApp/APITestApp.csproj
+++ b/APITestApp/APITestApp.csproj
@@ -157,6 +157,9 @@
     <Content Include="Scripts\SaveYourScriptsHere.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\TestCase01.xml" />
+    <Content Include="Scripts\TestCase02.xml" />
+    <Content Include="Scripts\TestCase03.xml" />
     <Content Include="UITester.ico" />
   </ItemGroup>
   <ItemGroup>
